--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.1.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
