--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,26 +18,25 @@ jobs:
       with:
         timezone: Asia/Taipei
 
-    - name: Setup Node
-      uses: actions/setup-node@v4
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v1
       with:
-        node-version: "lts/*"
-        cache: "npm"
+        bun-version: latest
 
     - name: Restore cache
       uses: actions/cache@v4
       with:
         path: |
           .next/cache
-        key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+        key: ${{ runner.os }}-nextjs-${{ hashFiles('**/bun.lockb') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
         restore-keys: |
-          ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+          ${{ runner.os }}-nextjs-${{ hashFiles('**/bun.lockb') }}-
 
     - name: Install dependencies
-      run: npm ci
+      run: bun i
 
     - name: Build with Next.js
-      run: npm run build
+      run: bun run build
 
   deploy:
     runs-on: ubuntu-latest
