--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.HOST }}
-        username: yuyu1015
+        username: exptech
         password: ${{ secrets.PASSWORD }}
         script: |
           cd /home/yuyu1015/weather-dashboard-release
